# yougen-note-savant

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/: .gitignore  README-DATABASE.md  README.md  alembic.ini  database_schema.sql  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/application/use_cases/: ai_chat.py  note_management.py  youtube_analysis.py
backend/src/domain/: models.py
backend/src/domain/entities/: download.py  note.py  video.py
backend/src/infrastructure/agents/: note_agent.py  video_agent.py
backend/src/infrastructure/db/: connection.py  init_db.py  migrations.py
backend/src/infrastructure/repositories/: history_repository.py  note_repository.py  video_repository.py
backend/src/infrastructure/services/: groq_service.py
backend/src/infrastructure/tools/: download_tool.py  transcript_tool.py
backend/src/models/: chat.py  note.py  youtube.py
backend/src/presentation/: main.py  websocket.py
backend/src/presentation/routes/: ai.py  downloads.py  history.py  note.py  youtube.py
backend/src/tests/: test_video_agent.py
src/: App.css  App.tsx  AppStyles.css  index.css
src/hooks/: use-toast.ts  useSpeech.ts  useSpeechRecognition.ts  useTheme.ts  useYoutubeUrl.ts
src/pages/: DownloadsView.tsx  HistoryView.tsx  Index.tsx  NotesView.tsx  PlaylistView.tsx  Settings.tsx  VideoView.tsx
src/services/: api.ts  websocket.ts
src/types/: api.ts  chat.ts  note.ts  speech.d.ts  youtube.ts
src/utils/: api.ts  (+4 more)
(+42 files in other folders)
